/*
Copyright 2017 The Pharmer Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.appscode.pharmer.apis.v1alpha1;

import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

message API {
  // AdvertiseAddress sets the address for the API server to advertise.
  optional string advertiseAddress = 1;

  // BindPort sets the secure port for the API Server to bind to
  optional int32 bindPort = 2;
}

message AWSSpec {
  // aws:TAG KubernetesCluster => clusterid
  optional string iamProfileMaster = 1;

  optional string iamProfileNode = 2;

  optional string masterSGName = 3;

  optional string nodeSGName = 4;

  optional string vpcCIDR = 5;

  optional string vpcCIDRBase = 6;

  optional string masterIPSuffix = 7;

  optional string subnetCidr = 8;
}

message AWSStatus {
  optional string masterSGID = 1;

  optional string nodeSGID = 2;

  optional string vpcID = 3;

  optional string subnetID = 4;

  optional string routeTableID = 5;

  optional string igwID = 6;

  optional string dhcpOptionsID = 7;

  optional string volumeID = 8;

  optional string bucketName = 9;
}

message Action {
  optional string action = 1;

  optional string resource = 2;

  optional string message = 3;
}

// ref: https://github.com/kubernetes/kubernetes/blob/8b9f0ea5de2083589f3b9b289b90273556bc09c4/pkg/cloudprovider/providers/azure/azure.go#L56
message AzureCloudConfig {
  optional string tenantId = 1;

  optional string subscriptionId = 2;

  optional string aadClientId = 3;

  optional string aadClientSecret = 4;

  optional string resourceGroup = 5;

  optional string location = 6;

  optional string subnetName = 7;

  optional string securityGroupName = 8;

  optional string vnetName = 9;

  optional string routeTableName = 10;

  optional string storageAccountName = 11;
}

message AzureSpec {
  optional string azureStorageAccountName = 1;

  // only Azure
  optional string instanceImageVersion = 2;

  optional AzureCloudConfig azureCloudConfig = 3;

  optional string rootPassword = 4;

  optional string subnetCidr = 5;
}

message AzureStorageSpec {
  optional string container = 1;

  optional string prefix = 2;
}

message CloudSpec {
  optional string cloudProvider = 1;

  optional string project = 2;

  optional string region = 3;

  optional string zone = 4;

  // master needs it for ossec
  optional string os = 5;

  optional string instanceImage = 8;

  optional string instanceImageProject = 9;

  optional AWSSpec aws = 10;

  optional GoogleSpec gce = 11;

  optional AzureSpec azure = 12;

  optional LinodeSpec linode = 13;
}

message CloudStatus {
  optional AWSStatus aws = 1;

  optional GCEStatus gce = 2;
}

message Cluster {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ClusterSpec spec = 2;

  optional ClusterStatus status = 3;
}

// Deprecated
message ClusterDeleteRequest {
  optional string name = 1;

  optional bool release_reserved_ip = 2;

  optional bool force = 3;

  optional bool keep_lodabalancers = 4;

  optional bool delete_dynamic_volumes = 5;
}

message ClusterSpec {
  optional CloudSpec cloud = 1;

  optional API api = 2;

  // Etcd       kubeadm.Etcd `json:"etcd" protobuf:"bytes,3,opt,name=etcd"`
  optional Networking networking = 4;

  optional string kubernetesVersion = 6;

  optional string binaryVersion = 7;

  // request data. This is needed to give consistent access to these values for all commands.
  optional bool doNotDelete = 8;

  // Auto Set
  // https://github.com/kubernetes/kubernetes/blob/master/cluster/gce/util.sh#L538
  optional string caCertPHID = 14;

  optional string frontProxyCaCertPHID = 15;

  optional string credentialName = 16;

  // Deprecated
  optional string masterInternalIp = 41;

  // the master root ebs volume size (typically does not need to be very large)
  // Deprecated
  optional string masterDiskID = 42;

  // Delete since moved to NodeGroup / Instance
  // Deprecated
  optional string masterDiskType = 43;

  // If set to Elasticsearch IP, master instance will be associated with this IP.
  // If set to auto, a new Elasticsearch IP will be acquired
  // Otherwise amazon-given public ip will be used (it'll change with reboot).
  // Deprecated
  optional string masterReservedIp = 46;

  map<string, string> kubeletExtraArgs = 50;

  map<string, string> apiServerExtraArgs = 51;

  map<string, string> controllerManagerExtraArgs = 52;

  map<string, string> schedulerExtraArgs = 53;

  repeated string authorizationModes = 54;

  // APIServerCertSANs sets extra Subject Alternative Names for the API Server signing cert
  repeated string apiServerCertSANs = 11;
}

// ClusterState describes the state of certain versions for a cluster
message ClusterState {
  // KubeVersion describes the version of the Kubernetes API Server, Controller Manager, Scheduler and Proxy.
  optional string kubeVersion = 1;

  // DNSVersion describes the version of the kube-dns images used and manifest version
  optional string dNSVersion = 2;

  // MasterKubeadmVersion describes the version of the kubeadm CLI
  optional string kubeadmVersion = 3;

  // KubeletVersions is a map with a version number linked to the amount of kubelets running that version in the cluster
  map<string, uint32> kubeletVersions = 4;
}

message ClusterStatus {
  optional string phase = 1;

  optional string reason = 2;

  optional string sshKeyExternalID = 3;

  optional CloudStatus cloud = 4;

  repeated k8s.io.api.core.v1.NodeAddress apiServer = 5;

  repeated ReservedIP reservedIP = 6;
}

message Credential {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional CredentialSpec spec = 2;
}

message CredentialSpec {
  optional string provider = 1;

  map<string, string> data = 2;
}

message DNSProvider {
  optional string credentialName = 1;
}

// ref: https://github.com/kubernetes/kubernetes/blob/8b9f0ea5de2083589f3b9b289b90273556bc09c4/pkg/cloudprovider/providers/gce/gce.go#L228
message GCECloudConfig {
  optional string tokenURL = 1;

  optional string tokenBody = 2;

  optional string projectID = 3;

  optional string networkName = 4;

  repeated string nodeTags = 5;

  optional string nodeInstancePrefix = 6;

  optional bool multizone = 7;
}

message GCEStatus {
  optional string bucketName = 1;
}

message GCSSpec {
  optional string bucket = 1;

  optional string prefix = 2;
}

message GoogleSpec {
  // gce
  // NODE_SCOPES="${NODE_SCOPES:-compute-rw,monitoring,logging-write,storage-ro}"
  repeated string nodeScopes = 1;

  // instance means either master or node
  optional GCECloudConfig gceCloudConfig = 2;
}

message LinodeSpec {
  // Azure, Linode
  optional string rootPassword = 1;

  optional int64 kernelId = 2;
}

message LocalSpec {
  optional string path = 1;
}

message Networking {
  optional string networkProvider = 4;

  // kubenet, flannel, calico, opencontrail
  optional string podSubnet = 1;

  optional string serviceSubnet = 2;

  optional string dnsDomain = 3;

  // NEW
  // Replacing API_SERVERS https://github.com/kubernetes/kubernetes/blob/62898319dff291843e53b7839c6cde14ee5d2aa4/cluster/aws/util.sh#L1004
  optional string dnsServerIP = 5;

  optional string nonMasqueradeCIDR = 6;

  optional string masterSubnet = 7;
}

message NodeGroup {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional NodeGroupSpec spec = 2;

  optional NodeGroupStatus status = 3;
}

message NodeGroupSpec {
  optional int64 nodes = 4;

  // Template describes the nodes that will be created.
  optional NodeTemplateSpec template = 3;
}

// NodeGroupStatus is the most recently observed status of the NodeGroup.
message NodeGroupStatus {
  // Nodes is the most recently oberved number of nodes.
  optional int64 nodes = 1;

  // ObservedGeneration reflects the generation of the most recently observed node group.
  // +optional
  optional int64 observedGeneration = 2;
}

message NodeInfo {
  optional string name = 1;

  optional string externalID = 2;

  optional string publicIP = 3;

  optional string privateIP = 4;

  optional string diskID = 5;
}

message NodeSpec {
  optional string sku = 2;

  optional bool spotInstances = 3;

  optional string nodeDiskType = 4;

  optional int64 nodeDiskSize = 5;

  optional string externalIPType = 6;

  map<string, string> kubeletExtraArgs = 7;
}

// PodTemplateSpec describes the data a pod should have when created from a template
message NodeTemplateSpec {
  // Specification of the desired behavior of the pod.
  // More info: https://git.k8s.io/community/contributors/devel/api-conventions.md#spec-and-status
  // +optional
  optional NodeSpec spec = 2;
}

message PharmerConfig {
  optional string context = 1;

  repeated Credential credentials = 2;

  optional StorageBackend store = 3;

  optional DNSProvider dns = 4;
}

message ReservedIP {
  optional string ip = 1;

  optional string id = 2;

  optional string name = 3;
}

message S3Spec {
  optional string endpoint = 1;

  optional string bucket = 2;

  optional string prefix = 3;
}

message SSHConfig {
  optional bytes privateKey = 1;

  optional string instanceAddress = 2;

  optional int32 instancePort = 3;

  optional string user = 4;
}

message StorageBackend {
  optional string credentialName = 1;

  optional LocalSpec local = 2;

  optional S3Spec s3 = 3;

  optional GCSSpec gcs = 4;

  optional AzureStorageSpec azure = 5;

  optional SwiftSpec swift = 6;
}

message SwiftSpec {
  optional string container = 1;

  optional string prefix = 2;
}

// https://github.com/kubernetes/kubernetes/blob/aa1dc9db3532dfbf09e45c8e3786a648cd217417/cmd/kubeadm/app/phases/upgrade/compute.go#L28
message Upgrade {
  optional string description = 1;

  optional ClusterState before = 2;

  optional ClusterState after = 3;
}

